--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,9 @@
-<!-- Create your form here -->
+<h1> Student Form </h1>
+<%= form_for @student do |f| %>
+    <%= f.label :first_Name %>
+    <%= f.text_field :first_name %> <br/>
+    <%= f.label :last_Name %>
+    <%= f.text_field :last_name %> <br>
+
+    <%= f.submit "Submit Student" %>
+    <% end %>
